# qt-draw-compare

./: .gitignore  AUTHORS  README.md  compile_flags.txt  configure.ac
src/: Makefile.am  draw_widget.cc  draw_widget.hh  main.cc  main_window.cc  main_window.hh
